--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
-basic_code_structure/.idea/
+*.basic_code_structure/.idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
